--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
+    "start": "node test/test-run.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,6 +14,7 @@
     "glob": "^7.1.2"
   },
   "devDependencies": {
+    "rimraf": "^2.6.2",
     "webpack": "^4.1.0"
   }
 }
