--- a/package.json
+++ b/package.json
@@ -1,20 +1,34 @@
 {
-  "name": "webpack-rename-material-icon-plugin",
-  "version": "1.0.0",
-  "description": "",
-  "main": "src/index.js",
-  "scripts": {
-    "start": "node test/test-run.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "glob": "^7.1.2"
-  },
-  "devDependencies": {
-    "rimraf": "^2.6.2",
-    "webpack": "^4.1.0"
-  }
+    "name": "material-ico-fallback-loader",
+    "version": "1.0.0",
+    "description": "",
+    "main": "src/index.js",
+    "scripts": {
+        "start": "node test/test-run.js",
+        "test": "jest"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {},
+    "devDependencies": {
+        "@webpack-contrib/test-utils": "^0.1.2",
+        "babel-jest": "^22.4.3",
+        "babel-preset-env": "^1.6.1",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^22.4.3",
+        "rimraf": "^2.6.2",
+        "webpack": "^4.1.0"
+    },
+    "jest": {
+        "moduleFileExtensions": [ "js", "json", "css" ],
+        "moduleDirectories": ["node_modules"],
+        "transform": {
+            "^.+\\.js$": "<rootDir>/node_modules/babel-jest"
+        },
+        "moduleNameMapper": {
+            "^.+\\.css$": "identity-obj-proxy"
+        },
+        "verbose": true
+    }
 }
