--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "src/index.js",
     "scripts": {
-        "start": "node test/test-run.js",
+        "start": "node example/ex-run.js",
         "test": "jest"
     },
     "keywords": [],
