--- a/package.json
+++ b/package.json
@@ -16,17 +16,23 @@
     },
     "dependencies": {},
     "devDependencies": {
-        "@webpack-contrib/test-utils": "^0.1.2",
+        "@webpack-contrib/test-utils": "^0.1.3",
         "babel-jest": "^22.4.3",
         "babel-preset-env": "^1.6.1",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^22.4.3",
         "rimraf": "^2.6.2",
-        "webpack": "^4.1.0"
+        "webpack": "^4.6.0"
     },
     "jest": {
-        "moduleFileExtensions": [ "js", "json", "css" ],
-        "moduleDirectories": ["node_modules"],
+        "moduleFileExtensions": [
+            "js",
+            "json",
+            "css"
+        ],
+        "moduleDirectories": [
+            "node_modules"
+        ],
         "transform": {
             "^.+\\.js$": "<rootDir>/node_modules/babel-jest"
         },
